# questa-hidpi

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  hidpi.patch  questa_hidpi.py  requirements.txt
lib/: CMakeLists.txt  questa-hidpi-patch.c
test/: hello.tcl
